# knit_ft_project

./: .gitignore  README.md  build_windows_exe.bat  knit_hog_fft.py  pyproject.toml  requirements.txt
docs/: BOUNDARIES.md  BOUNDARY_AUDIT_REPORT.txt  REPOSITORY_LAYOUT.md
docs/design_handoff_knit_grid_inspector/: README.md  app.jsx  data.jsx  dock.jsx  icons.jsx  index.html  inspector.jsx  queue.jsx  styles.css  swatch.jsx
samples/: SWA001_LANG01.md  SWA001_LANG01_1.yaml  SWA001_LANG02.md  SWA001_LANG02.yaml  SWA002_MONDIAL01.md  SWA002_MONDIAL01.yaml  SWA002_MONDIAL02.yaml  SWA003_LANG01.md  SWA003_LANG01.yaml  SWA003_LANG02.md  SWA003_LANG02.yaml  SWA004_TITANWOOL01.md  SWA004_TITANWOOL01.yaml  SWA004_TITANWOOL02.md  SWA004_TITANWOOL02.yaml  SWA004_TITANWOOL03.md  SWA004_TITANWOOL03.yaml  SWA004_TITANWOOL04.md  SWA004_TITANWOOL04.yaml  SWA004_TITANWOOL04_base_colour.json  SWA005_MONDIAL01.md  SWA005_MONDIAL01.yaml  T1_5t_w3.yaml
src/knit_grid_catalog_delivery_v14/: __init__.py  __main__.py  catalog_delivery.py  cli.py  contracts.py  cover_renderer.py  dropbox_gui.py  guardrails.py  knit_grid_literature_guided_v13.py  tiff_writer.py  v13_adapter.py
src/knit_grid_catalog_delivery_v14/adapter/: v13_adapter.py
src/knit_grid_catalog_delivery_v14/analysis/: knit_grid_literature_guided_v13.py  numba_accel.py
src/knit_grid_catalog_delivery_v14/common/: gauge.py  metadata_io.py
src/knit_grid_catalog_delivery_v14/delivery/: catalog_delivery.py  contracts.py  cover_renderer.py  tiff_writer.py
src/knit_grid_catalog_delivery_v14/interface/: dropbox_gui.py  (+1 more)
(+2 files in other folders)
